--- a/projects/ajsf-core/package.json
+++ b/projects/ajsf-core/package.json
@@ -1,35 +1,7 @@
 {
-    "name": "@ajsf/core",
-    "version": "0.1.4",
-    "description": "Angular JSON Schema Form builder core",
-    "author": "https://github.com/hamzahamidi/ajsf/graphs/contributors",
-    "keywords": [
-        "Angular",
-        "ng",
-        "Angular6",
-        "Angular 6",
-        "ng6",
-        "Angular7",
-        "Angular 7",
-        "ng7",
-        "Angular8",
-        "Angular 8",
-        "ng8",
-        "JSON Schema",
-        "form",
-        "forms",
-        "form builder",
-        "ajsf",
-        "angular json schema form"
-    ],
+    "name": "@alauda/ajsf-core",
+    "version": "0.0.1",
     "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/hamzahamidi/ajsf"
-    },
-    "bugs": {
-        "url": "https://github.com/hamzahamidi/ajsf/issues"
-    },
     "private": false,
     "dependencies": {
         "lodash-es": "^4.17.15",
