chore: update package config

--- a/angular.json
+++ b/angular.json
@@ -124,7 +124,7 @@
         }
       }
     },
-    "@ajsf/core": {
+    "@alauda/ajsf-core": {
       "root": "projects/ajsf-core",
       "sourceRoot": "projects/ajsf-core/src",
       "projectType": "library",
