--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Publish
         run: |
           npm set //registry.npmjs.org/:_authToken "$NPM_TOKEN"
-          npm publish release
+          npm publish dist/@ajsf/core
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
