--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prestart": "npm run build:libs",
     "start": "ng serve",
     "start:prod": "ng serve --prod",
-    "build": "ng build @alauda/ajsf-core",
+    "build": "ng build @ajsf/core",
     "postbuild:core": "cp README.md LICENSE  dist/@ajsf/core/",
     "build:demo": "yarn build:libs && ng build demo --prod --base-href ./",
     "build:demo-only": "ng build demo --prod --base-href ./",
@@ -23,52 +23,58 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@alauda/common-snippet": "2.3.14",
-    "@alauda/ui": "5.1.9",
-    "@angular/animations": "^9.1.9",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "^9.1.9",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
+    "@alauda/common-snippet": "2.3.25",
+    "@alauda/ui": "5.2.0",
+    "@angular/animations": "^10.0.7",
+    "@angular/cdk": "^10.1.2",
+    "@angular/common": "^10.0.7",
+    "@angular/compiler": "^10.0.7",
+    "@angular/core": "^10.0.7",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "^10.0.7",
+    "@angular/platform-browser": "^10.0.7",
+    "@angular/platform-browser-dynamic": "^10.0.7",
+    "@angular/router": "^10.0.7",
     "brace": "^0.11.1",
-    "clipboard-polyfill": "^2.8.6",
+    "clipboard-polyfill": "^3.0.1",
     "core-js": "^3.6.5",
     "json-keys-sort": "^2.0.0",
     "lodash-es": "^4.17.15",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular-devkit/build-ng-packagr": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "^9.1.9",
-    "@types/jasmine": "~3.5.10",
+    "@alauda/code-editor": "^2.3.0",
+    "@alauda/custom-webpack": "^0.8.3",
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular-devkit/build-ng-packagr": "~0.1000.5",
+    "@angular/cli": "~10.0.5",
+    "@angular/compiler-cli": "^10.0.7",
+    "@angular/language-service": "^10.0.7",
+    "@types/jasmine": "~3.5.12",
     "@types/jasminewd2": "~2.0.6",
-    "@types/lodash": "^4.14.153",
-    "@types/node": "~14.0.5",
-    "codecov": "^3.7.0",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.5.0",
+    "@types/lodash": "^4.14.158",
+    "@types/node": "~14.0.27",
+    "codecov": "^3.7.2",
+    "codelyzer": "^6.0.0",
+    "dayjs": "^1.8.31",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~5.0.9",
+    "js-yaml": "^3.14.0",
+    "jwt-decode": "^2.2.0",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "ng-packagr": "^9.1.5",
+    "ng-packagr": "^10.0.3",
     "protractor": "~7.0.0",
-    "ts-node": "~8.10.1",
-    "tsickle": "^0.38.1",
+    "ts-essentials": "^7.0.0",
+    "ts-node": "~8.10.2",
+    "tsickle": "^0.39.1",
     "tslib": "^2.0.0",
-    "tslint": "~6.1.2",
-    "typescript": "3.8.3",
+    "tslint": "~6.1.3",
+    "typescript": "3.9.7",
     "webpack-bundle-analyzer": "^3.8.0"
   },
   "prettier": {
