--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postbuild:core": "cp README.md LICENSE  dist/@ajsf/core/",
     "build:demo": "yarn build:libs && ng build demo --prod --base-href ./",
     "build:demo-only": "ng build demo --prod --base-href ./",
+    "postinstall": "yarn-deduplicate || exit 0",
     "prestats": "ng build demo --prod --stats-json",
     "stats": "webpack-bundle-analyzer dist/demo/stats.json",
     "test:core": "ng test @ajsf/core",
@@ -50,7 +51,6 @@
   },
   "devDependencies": {
     "@1stg/app-config": "^0.5.5",
-    "@1stg/browserslist-config": "^0.6.2",
     "@1stg/lib-config": "^0.5.5",
     "@1stg/tslint-config": "^0.8.5",
     "@alauda/code-editor": "^2.3.0",
@@ -85,9 +85,10 @@
     "tslib": "^2.0.0",
     "tslint": "~6.1.3",
     "typescript": "3.9.7",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "yarn-deduplicate": "^2.1.1"
   },
-  "prettier": {
-    "singleQuote": true
+  "resolutions": {
+    "prettier": "^2.0.5"
   }
 }
