chore: update config

--- a/projects/ajsf-aui/tsconfig.lib.json
+++ b/projects/ajsf-aui/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@1stg/tsconfig/angular",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es2015",
