--- a/package.json
+++ b/package.json
@@ -6,20 +6,13 @@
     "yarn": ">=1.3.0"
   },
   "license": "MIT",
-  "private": true,
-  "workspaces": [
-    "projects/*"
-  ],
   "scripts": {
-    "ng": "ng",
-    "prestart": "npm run build:libs",
     "start": "ng serve",
     "start:prod": "ng serve --prod",
     "build:core": "ng build @ajsf/core",
     "build:aui": "ng build @ajsf/aui",
+    "build:all": "yarn build:core && build:aui",
     "postbuild:core": "cp README.md LICENSE  dist/@ajsf/core/",
-    "build:demo": "yarn build:libs && ng build demo --prod --base-href ./",
-    "build:demo-only": "ng build demo --prod --base-href ./",
     "postinstall": "yarn-deduplicate || exit 0",
     "prestats": "ng build demo --prod --stats-json",
     "stats": "webpack-bundle-analyzer dist/demo/stats.json",
@@ -77,6 +70,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
+    "ng-monaco-editor": "^2.3.0",
     "ng-packagr": "^10.0.3",
     "protractor": "~7.0.0",
     "ts-essentials": "^7.0.0",
