--- a/projects/ajsf-aui/package.json
+++ b/projects/ajsf-aui/package.json
@@ -6,5 +6,8 @@
     "@alauda/ui": "^5.2.0",
     "lodash-es": "^4.0.0"
   },
+  "dependencies": {
+    "@alauda/ajsf-core": "^0.0.1"
+  },
   "sideEffects": false
 }
