--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,13 @@
     "target": "es2015",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "typeRoots": ["node_modules/@types", "manual_typings"],
+    "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
     "paths": {
       "@angular/*": ["./node_modules/@angular/*"],
       "lodash/*": ["node_modules/@types/lodash-es/*"],
-      "@ajsf/core": ["projects/ajsf-core/src/public_api"],
-      "@ajsf/core/*": ["projects/ajsf-core/src/public_api/*"]
+      "@alauda/ajsf-core": ["dist/@ajsf/core"],
+      "@alauda/ajsf-core/*": ["dist/@ajsf/core/*"]
     }
   },
   "angularCompilerOptions": {
